test/org/midica/testfiles/failing/eff-flow-broken-by-function.midica
INCLUDE inc/instruments.midica


0: vol.wait()
FUNCTION func
END
0: .set(50)

CALL func
